TEST_PROGRAMS/VALID/05/anon_struct_array_var_dec.go
/* Anonymous struct array variable declaration. */

package main

var array [] struct {
	f string
}

func main() {
	// Do nothing
}
