TEST_PROGRAMS/INVALID/05/array_var_dec_with_missing_type.go
/* Array variable declaration with missing type. */

package main

var a[26] // Error: Type missing (Looks like an array access).

func main() {
	// Do nothing.
}
